# openmpt

./: .appveyor.yml  .cirrus.yml  .clang-format  .doozer.json  .gitattributes  .gitignore  .travis.yml  AUTHORS  COPYING  ChangeLog  History.txt  INSTALL  LICENSE  Makefile  Makefile.am  Makefile.in  README  README.md  TODO  aclocal.m4  appveyor.yml  config.h.in  configure  configure.in  ltconfig  ltmain.sh  modplug.htm  modplug.kdevprj  modplugxmms.cpp  modplugxmms.h  modplugxmms.kdevprj  plugin.cpp  readme.txt  stddefs.h
common/: AudioCriticalSection.cpp  AudioCriticalSection.h  BuildSettings.h  BuildSettingsCompiler.h  CompilerDetect.h  ComponentManager.cpp  ComponentManager.h  Endianness.h  FileReader.cpp  FileReader.h  FileReaderFwd.h  FlagSet.h  GzipWriter.h  Logging.cpp  Logging.h  Profiler.cpp  Profiler.h  Reporting.cpp  Reporting.h  StringFixer.h  WriteMemoryDump.h  misc_util.cpp  misc_util.h  mptAlloc.cpp  mptAlloc.h  mptAssert.h  mptAtomic.h  mptBaseMacros.h  mptBaseTypes.h  mptBaseUtils.h  mptBufferIO.h  mptBuildSettings.h  mptCPU.cpp  mptCPU.h  mptCRC.h  mptCrypto.cpp  mptCrypto.h  mptException.h  mptExceptionText.h  mptFS.cpp  (+49 more)
doc/: backporting_patches.md  contributing.md  libopenmpt_release.md  libopenmpt_release.txt  module_formats.md  openmpt_release.md  openmpt_styleguide.md  release_branches.md  signing_releases.md  string_types.md  year_changed.md
examples/: .clang-format  chipsim.h  libopenmpt_example_c.c  libopenmpt_example_c_mem.c  libopenmpt_example_c_pipe.c  libopenmpt_example_c_probe.c  libopenmpt_example_c_safe.c  libopenmpt_example_c_stdout.c  libopenmpt_example_c_unsafe.c  libopenmpt_example_cxx.cpp
glade/: Makefile.am  Makefile.in  README  about.glade  configure.glade  modinfo.glade  modplug-xmms.glade
include/: 3DL2.H  3DL2HELP.H  AEffect.h  AudioEffect.hpp  MachineInterface.h  UnRAR.premake4.lua  aeffectx.h  bladedll.h  flac.premake4.lua  lhasa.premake4.lua  miniz.premake4.lua  minizip.premake4.lua  portaudio.premake4.lua  portmidi.premake4.lua  premake4-defaults-DLL.lua  premake4-defaults-EXE.lua  premake4-defaults.lua  premake4.lua  pugixml.premake4.lua  r8brain.premake4.lua  readme.txt  smbPitchShift.premake4.lua  soundtouch.premake4.lua  update_premake4_projects.cmd  zlib.premake4.lua
installer/: VST2MID.iss  filetypes-multi-arch-per-arch-retro.iss  filetypes-multi-arch-per-arch.iss  filetypes-multi-arch-retro.iss  filetypes-multi-arch.iss  filetypes.iss  generate_update_json.py  generate_update_json_retro.py  install-multi-arch-retro-signed.iss  install-multi-arch-retro.iss  install-multi-arch-signed.iss  install-multi-arch.iss  install-unmo3-free-itd.iss  install-unmo3-free.iss  install.iss  merge-update-json.py  plugins.iss  uninstall-single-arch.iss  utilities.iss  vst_scan.iss  win32.iss  win64.iss
libmodplug/: Makefile.am  Makefile.in
libopenmpt/: .clang-format  Doxyfile  Doxyfile-c  Doxyfile-cpp  SettingsForm.cpp  SettingsForm.h  foo_openmpt.cpp  foo_openmpt.sln  foo_openmpt.vcxproj  foo_openmpt.vcxproj.filters  in_openmpt.cpp  in_openmpt.vcxproj  in_openmpt.vcxproj.filters  libopenmpt.cpp  libopenmpt.h  libopenmpt.hpp  libopenmpt.pc.in  libopenmpt.sln  libopenmpt.vcxproj  libopenmpt.vcxproj.filters  libopenmptDLL.vcxproj  libopenmptDLL.vcxproj.filters  libopenmpt_c.cpp  libopenmpt_config.h  libopenmpt_cxx.cpp  libopenmpt_ext.cpp  libopenmpt_ext.h  libopenmpt_ext.hpp  libopenmpt_ext_impl.cpp  libopenmpt_ext_impl.hpp  libopenmpt_foobar2000.cpp  libopenmpt_foobar2000.sln  libopenmpt_foobar2000.vcxproj  libopenmpt_foobar2000.vcxproj.filters  libopenmpt_impl.cpp  libopenmpt_impl.hpp  libopenmpt_interactive.cpp  libopenmpt_interactive.hpp  libopenmpt_internal.h  libopenmpt_modplug.c  (+36 more)
misc/: GzipWriter.h  JSON.h  WriteMemoryDump.h  mptCPU.cpp  mptCPU.h  mptClock.cpp  mptClock.h  mptColor.cpp  mptColor.h  mptCrypto.cpp  mptCrypto.h  mptFileCompression.cpp  mptFileCompression.h  mptLibrary.cpp  mptLibrary.h  mptMutex.h  mptOS.cpp  mptOS.h  mptOSException.h  mptUUIDNamespace.cpp  mptUUIDNamespace.h  mptWine.cpp  mptWine.h
modplugxmms/: Makefile.am  Makefile.in  modplugxmms.cpp  modplugxmms.h  modprops.h  plugin.cpp  plugin.h
modplugxmms/archive/: Makefile.am  Makefile.in  arch_bz2.cpp  arch_bz2.h  arch_gzip.cpp  arch_gzip.h  arch_rar.cpp  arch_rar.h  arch_raw.cpp  arch_raw.h  arch_zip.cpp  arch_zip.h  archive.cpp  archive.h  open.cpp  open.h
modplugxmms/gui/: Makefile.am  Makefile.in  callbacks.cpp  callbacks.h  interface.cpp  main.cpp  main.h  support.cpp  support.h
modplugxmms/soundfile/: Makefile.am  Makefile.in  fastmix.cpp  load_669.cpp  load_amf.cpp  load_ams.cpp  load_dbm.cpp  load_dmf.cpp  load_dsm.cpp  load_far.cpp  load_it.cpp  load_j2b.cpp  load_mdl.cpp  load_med.cpp  load_mod.cpp  load_mt2.cpp  load_mtm.cpp  load_okt.cpp  load_psm.cpp  load_ptm.cpp  load_s3m.cpp  load_stm.cpp  load_ult.cpp  load_umx.cpp  load_xm.cpp  mmcmp.cpp  snd_dsp.cpp  snd_flt.cpp  snd_fx.cpp  sndfile.cpp  sndfile.h  sndmix.cpp  stdafx.h  tables.cpp  waveform.cpp
mptrack/: ACMConvert.cpp  ACMConvert.h  AboutDialog.cpp  AboutDialog.h  AbstractVstEditor.cpp  AbstractVstEditor.h  AccessibleButton.h  Autotune.h  (+330 more)
(+2514 files in other folders)
