dnl Process this file with autoconf to produce a configure script.
AC_INIT(Makefile.am)

AM_CONFIG_HEADER(config.h)

AM_INIT_AUTOMAKE(modplugxmms,1.1.1)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CXX
AC_PROG_RANLIB
AM_PROG_LIBTOOL

dnl find install dir

AM_PATH_XMMS(1.0.0, , AC_MSG_ERROR([*** XMMS >= 1.0.0 not installed - please install first ***]))

plugindir=$XMMS_INPUT_PLUGIN_DIR
AC_SUBST(plugindir)

AC_OUTPUT(Makefile modplugxmms/Makefile modplugxmms/soundfile/Makefile modplugxmms/gui/Makefile modplugxmms/archive/Makefile )
