dnl Process this file with autoconf to produce a configure script.
AC_INIT(Makefile.am)

AM_CONFIG_HEADER(config.h)

AM_INIT_AUTOMAKE(modplugxmms, 1.3a)

dnl Checks for programs.
AC_DISABLE_STATIC
AM_DISABLE_STATIC
AC_PROG_CC
AC_PROG_CXX
AC_PROG_RANLIB
AM_PROG_LIBTOOL

CXXFLAGS="-fno-exceptions -O2 -Wall -ffast-math -D_REENTRANT `glib-config --cflags`"
# CXXFLAGS="-fno-exceptions -g -Wall -ffast-math -D_REENTRANT `glib-config --cflags`"

case ${target_os} in
	*sun* | *solaris*)
		CXXFLAGS="$CXXFLAGS -fpermissive"
		;;
esac

dnl find install dir
AM_PATH_XMMS(1.0.0, , AC_MSG_ERROR([*** XMMS >= 1.0.0 not installed - please install first ***]))

plugindir=$XMMS_INPUT_PLUGIN_DIR
AC_SUBST(plugindir)

AC_OUTPUT(Makefile
          modplugxmms/Makefile
          modplugxmms/soundfile/Makefile
          modplugxmms/gui/Makefile
          modplugxmms/archive/Makefile
          glade/Makefile
         )
