noinst_LTLIBRARIES = libsoundfile.la
libsoundfile_la_LDFLAGS = -module -avoid-version
libsoundfile_la_SOURCES = waveform.cpp tables.cpp sndmix.cpp sndfile.cpp snd_fx.cpp snd_flt.cpp snd_dsp.cpp mmcmp.cpp load_xm.cpp load_wav.cpp load_umx.cpp load_ult.cpp load_stm.cpp load_s3m.cpp load_ptm.cpp load_okt.cpp load_mtm.cpp load_mod.cpp load_med.cpp load_mdl.cpp load_it.cpp load_far.cpp load_dsm.cpp load_dmf.cpp load_dbm.cpp load_ams.cpp load_amf.cpp load_669.cpp fastmix.cpp

EXTRA_DIST = fastmix.cpp it_defs.h load_669.cpp load_amf.cpp load_ams.cpp load_dbm.cpp load_dmf.cpp load_dsm.cpp load_far.cpp load_it.cpp load_mdl.cpp load_med.cpp load_mod.cpp load_mtm.cpp load_okt.cpp load_ptm.cpp load_s3m.cpp load_stm.cpp load_ult.cpp load_umx.cpp load_wav.cpp load_xm.cpp mmcmp.cpp snd_dsp.cpp snd_flt.cpp snd_fx.cpp sndfile.cpp sndfile.h sndmix.cpp stdafx.h tables.cpp waveform.cpp 
